Fix about page people behind colors

--- a/src/public/less/pages/about.less
+++ b/src/public/less/pages/about.less
@@ -185,6 +185,7 @@
 			}
 
 			>div:nth-child(3) {
+				color: #5c667a;
 				font-size: 14px;
 				line-height: 20px;
 				margin-bottom: 8px;
